Document upload, Replace, Delete Added.
